opam-version: "2.0"
version: "0.2"
maintainer: "Grégoire Henry <gregoire.henry@tezos.com>"
authors: "Grégoire Henry <gregoire.henry@tezos.com>"
license: "LGPL-2.1-with-OCaml-exception"
homepage: "https://github.com/OCamlPro/ocplib-resto"
bug-reports: "https://github.com/OCamlPro/ocplib-resto/issues"
dev-repo: "git+https://github.com/OCamlPro/ocplib-resto"

build: [
  [ "dune" "build" "-p" name "-j" jobs ]
]
run-test: [
  [ "dune" "runtest" "-p" name "-j" jobs ]
]

depends: [
  "dune" {build}
  "ocplib-resto" { = "0.2" }
  "ocplib-resto-json" {= "0.2" & with-test}
  "lwt" { >= "3.0.0" }
]
synopsis: "Minimal OCaml library to define type-safe HTTP/JSON RPC catalogs"
