opam-version: "2.0"
version: "0.2"
maintainer: "Grégoire Henry <gregoire.henry@tezos.com>"
authors: "Grégoire Henry <gregoire.henry@tezos.com>"
license: "LGPL-2.1-with-OCaml-exception"
homepage: "https://github.com/OCamlPro/ocplib-resto"
bug-reports: "https://github.com/OCamlPro/ocplib-resto/issues"
dev-repo: "git+https://github.com/OCamlPro/ocplib-resto"

build: [
  [ "dune" "build" "-p" name "-j" jobs ]
]
run-test: [
  [ "dune" "runtest" "-p" name "-j" jobs ]
]

depends: [
  "ocamlfind" {build}
  "dune" {build}
  "ocplib-resto" { = "0.2" }
  "ocplib-json-typed-bson" { >= "0.7" }
]
synopsis: "JSON/BSON encoders for ocplib-resto RPCs"
